# IC-T2G2

./: .gitignore  README.md  notes-golomb.txt
Projeto2/: CMakeLists.txt  bitstream.cpp  bitstream.h  golomb.cpp  golomb.h  golombMain.cpp  img_tools.cpp  img_tools.h  img_tools_main.cpp  imgcodec.cpp  imgcodec.h  imgcodecmain.cpp  mainExtract.cpp  mainTools.cpp  opencv.cpp  ppm_extract.cpp  ppm_extract.h  sndCodec.cpp  sndCodec.h  sndCodecMain.cpp  testbitstream.cpp  testsndcodec.cpp  tools.cpp
Projeto2/imagesamples/: airplaneR1.ppm  airplaneR2.ppm  airplaneR3.ppm  airplaneR4.ppm  anemoneNeg.ppm  arialHor.ppm  arialbright.ppm  arialnegative.ppm  arialvertical.ppm  baboonblue.pgm  baboongreen.pgm  baboongreen.ppm  baboonred.pgm  baboonred.ppm  bike32.ppm  bike3green.ppm  boat2.ppm  boatBrt-40.ppm  boatBrt-60.ppm  boatBrt40.ppm  boatBrt60.ppm  girl1.ppm  girl2.ppm  girl3.ppm  lena2.ppm  lenablue.pgm  lenablue.ppm  lenagreen.pgm  lenagreen.ppm  lenared.pgm  lenared.ppm  peppersgreen.ppm
Projeto2/test/: 1-gc  cola  number-gc  sample02-gc
Projeto2/test/bitstream/: write
Projeto2/test/imgCodec/: airplanecode
Projeto2/test/sndCodec/: sample.gc  sample02.gc  sample04-dynamic.gc  sample04.gc
Projeto3/: CMakeLists.txt  Makefile
sndfile-example-bin/: wav_cp  wav_dct  wav_hist
sndfile-example-src/: CMakeLists.txt  bitstream.cpp  bitstream.h  chars.txt  codec.cpp  codec.h  encoder-decoder.cpp  hist8bits.txt  newbitstream.cpp  newbitstream.h  wav_cmp.cpp  wav_cmp.h  wav_cp.cpp  wav_effects.cpp  wav_effects.h  wav_hist.cpp  wav_hist.h  wav_quant.cpp  wav_quant.h
sndfile-example-src/part2tests/: bits-dec.txt  bits.txt  bytes
